--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="div">
         <!-- Left floating images -->
         <div class="float-left">
-          <img class="floating" src="img/valk.png" alt="Valk Item" />
-          <img class="floating" src="img/pstf.png" alt="PSTF Item" />
+          <img class="floating glow-blue" src="img/valk.png" alt="Valk Item" />
+          <img class="floating glow-purple" src="img/pstf.png" alt="PSTF Item" />
         </div>
 
         <!-- Centered logo and text -->
@@ -38,8 +38,8 @@
 
         <!-- Right floating images -->
         <div class="float-right">
-          <img class="floating" src="img/aureus.png" alt="Aureus Item" />
-          <img class="floating" src="img/bloxy.png" alt="Bloxy Item" />
+          <img class="floating glow-gold" src="img/aureus.png" alt="Aureus Item" />
+          <img class="floating glow-yellow" src="img/bloxy.png" alt="Bloxy Item" />
         </div>
       </div>
     </div>
