--- a/index.html
+++ b/index.html
@@ -39,9 +39,4 @@
         <!-- Right floating images -->
         <div class="float-right">
           <img class="floating glow-gold" src="img/aureus.png" alt="Aureus Item" />
-          <img class="floating glow-yellow" src="img/bloxy.png" alt="Bloxy Item" />
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+          <!-- Use 'glow-dark' if
