--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="coming-soon">
       <div class="float-left">
         <img class="floating glow-blue" src="img/valk.png" alt="Valk Item" />
-        <img class="floating glow-purple" src="img/pstf.png" alt="PSTF Item" />
+        <img class="floating glow-gray" src="img/pstf.png" alt="PSTF Item" />
       </div>
 
       <div class="center">
