--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RoStake.com - #1 Upcoming Case Opening Site</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/images/icon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="coming-soon">
-      <div class="float-left">
-        <img class="floating glow-blue" src="img/valk.png" alt="Valk Item" />
-        <img class="floating glow-gray" src="img/pstf.png" alt="PSTF Item" />
-      </div>
+      <div class="div">
+        <!-- Left floating images -->
+        <div class="float-left">
+          <img class="floating" src="img/valk.png" alt="Valk Item" />
+          <img class="floating" src="img/pstf.png" alt="PSTF Item" />
+        </div>
 
-      <div class="center">
-        <div class="seach-input"><div class="name">Coming Soon</div></div>
-        <img class="ROSTAKE" src="img/logo.png" alt="RoStake Logo" />
-        <p class="BOTTOM-TEXT">
-          <span class="text-wrapper">THE </span>
-          <span class="span">#1</span>
-          <span class="text-wrapper"> ROBLOX CASE OPENING PLATFORM</span>
-        </p>
-        <button
-          class="button"
-          onclick="location.href = 'https://discord.gg/rostake';"
-        >
-          <div class="text-wrapper-2">Join Official Discord Server</div>
-        </button>
-      </div>
+        <!-- Centered logo and text -->
+        <div class="overlap-group">
+          <div class="group">
+            <div class="seach-input"><div class="name">Coming Soon</div></div>
+            <img class="ROSTAKE" src="img/logo.png" alt="RoStake Logo" />
+            <p class="BOTTOM-TEXT">
+              <span class="text-wrapper">THE </span>
+              <span class="span">#1</span>
+              <span class="text-wrapper"> ROBLOX CASE OPENING PLATFORM</span>
+            </p>
+            <button
+              class="button"
+              onclick="location.href = 'https://discord.gg/rostake';"
+            >
+              <div class="text-wrapper-2">Join Official Discord Server</div>
+            </button>
+          </div>
+        </div>
 
-      <div class="float-right">
-        <img class="floating glow-gold" src="img/aureus.png" alt="Aureus Item" />
-        <img class="floating glow-teal" src="img/bloxy.png" alt="Bloxy Item" />
+        <!-- Right floating images -->
+        <div class="float-right">
+          <img class="floating" src="img/aureus.png" alt="Aureus Item" />
+          <img class="floating" src="img/bloxy.png" alt="Bloxy Item" />
+        </div>
       </div>
     </div>
   </body>
