--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RoStake.com - #1 Upcoming Case Opening Site</title>
+    <title>Stando - #1 Best Da Hood Bot Scripts</title>
     <link rel="icon" type="image/x-icon" href="/images/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
