--- a/index.html
+++ b/index.html
@@ -43,5 +43,20 @@
         </div>
       </div>
     </div>
+
+    <!-- Title Animation Script -->
+    <script>
+      let txt = "Stando - #1 Best Da Hood Bot Scripts ";
+      let speed = 200; // smaller number = faster scroll
+      let i = 0;
+
+      function moveTitle() {
+        document.title = txt.substring(i) + txt.substring(0, i);
+        i = (i + 1) % txt.length;
+        setTimeout(moveTitle, speed);
+      }
+
+      moveTitle();
+    </script>
   </body>
 </html>
