--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <p class="BOTTOM-TEXT">
               <span class="text-wrapper">THE </span>
               <span class="span">#1</span>
-              <span class="text-wrapper"> ROBLOX CASE OPENING PLATFORM</span>
+              <span class="text-wrapper"> DA HOOD BOT SCRIPT PROVIDER</span>
             </p>
             <button
               class="button"
-              onclick="location.href = 'https://discord.gg/rostake';"
+              onclick="location.href = 'https://discord.gg/stando';"
             >
               <div class="text-wrapper-2">Join Official Discord Server</div>
             </button>
