--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stando - #1 Best Da Hood Bot Scripts</title>
   <link rel="icon" type="image/x-icon" href="/images/icon.ico" />
-  <link rel="stylesheet" href="globals.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="main">
     <div class="div">
-      <!-- Left floating image -->
       <div class="float-left">
         <img class="floating" src="img/valk.png" alt="Valk Item" />
       </div>
-
-      <!-- Centered logo and content -->
       <div class="overlap-group">
         <div class="group">
           <img class="ROSTAKE" src="img/logo.png" alt="RoStake Logo" />
@@ -25,16 +21,10 @@
             <span class="span">#1</span>
             <span class="text-wrapper"> DA HOOD BOT SCRIPT PROVIDER</span>
           </p>
-
-          <!-- Discord Button -->
           <button class="button" onclick="location.href='https://discord.gg/stando';">
             <div class="text-wrapper-2">Join Official Discord Server</div>
           </button>
-
-          <!-- Scripts Label -->
           <p class="scripts-label">Scripts:</p>
-
-          <!-- Script Buttons -->
           <div class="scripts-buttons">
             <button class="button" onclick="location.href='LINK_TO_STAND_SCRIPT';">
               <div class="text-wrapper-2">Stand Script</div>
@@ -48,44 +38,36 @@
           </div>
         </div>
       </div>
-
-      <!-- Right floating image -->
       <div class="float-right">
         <img class="floating" src="img/aureus.png" alt="Aureus Item" />
       </div>
     </div>
   </div>
 
-  <!-- Tutorials Section -->
   <div class="tutorials">
-    <h2 id="stand-tutorial" class="tutorial-header fade-in">Stand Tutorial</h2>
+    <h2 class="tutorial-header fade-in">Stand Tutorial</h2>
     <div class="video-container fade-in">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Stand Tutorial" allowfullscreen></iframe>
     </div>
-
-    <h2 id="sniper-tutorial" class="tutorial-header fade-in">Sniper Tutorial</h2>
+    <h2 class="tutorial-header fade-in">Sniper Tutorial</h2>
     <div class="video-container fade-in">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" title="Sniper Tutorial" allowfullscreen></iframe>
     </div>
-
-    <h2 id="xk5ng-tutorial" class="tutorial-header fade-in">xk5ng Gui Showcase</h2>
+    <h2 class="tutorial-header fade-in">xk5ng Gui Showcase</h2>
     <div class="video-container fade-in">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" title="xk5ng Gui Showcase" allowfullscreen></iframe>
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer">
     <p>© Stando 2025. All rights reserved.</p>
   </footer>
 
-  <!-- Title Animation Script -->
   <script>
     let txt = "Stando - #1 Best Da Hood Bot Scripts   ";
     let speed = 200;
     let pauseTime = 1500;
     let i = 0;
-
     function moveTitle() {
       if (i <= txt.length) {
         document.title = txt.substring(i);
@@ -98,7 +80,6 @@
     moveTitle();
   </script>
 
-  <!-- Scroll Fade-in Script -->
   <script>
     function handleScrollFade() {
       const elements = document.querySelectorAll('.fade-in');
