--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
             <span class="span">#1</span>
             <span class="text-wrapper"> DA HOOD BOT SCRIPT PROVIDER</span>
           </p>
-          <button class="button" onclick="location.href='https://discord.gg/stando';">
-            <div class="text-wrapper-2">Join Official Discord Server</div>
+          <button class="image-button" onclick="location.href='https://discord.gg/stando';">
+            <img src="https://img.favpng.com/6/25/23/computer-icons-discord-logo-smiley-emoticon-png-favpng-ThnHtQ8vuLhZrWxwuJtQWf8Aj.jpg" alt="Discord Button" />
           </button>
           <p class="scripts-label">Scripts:</p>
           <div class="scripts-buttons">
-            <button class="button" onclick="location.href='LINK_TO_STAND_SCRIPT';">
+            <button class="button" onclick="location.href='https://discord.gg/stando';">
               <div class="text-wrapper-2">Stand Script</div>
             </button>
-            <button class="button" onclick="location.href='LINK_TO_SNIPER_SCRIPT';">
+            <button class="button" onclick="location.href='https://discord.gg/stando';">
               <div class="text-wrapper-2">Sniper Script</div>
             </button>
-            <button class="button" onclick="location.href='LINK_TO_XK5NG_GUI';">
+            <button class="button" onclick="location.href='https://discord.gg/stando';">
               <div class="text-wrapper-2">xk5ng Gui</div>
             </button>
           </div>
