--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       </div>
       <div class="overlap-group">
         <div class="group">
-          <img class="ROSTAKE" src="img/logo.png" alt="RoStake Logo" />
+          <img class="STANDO" src="img/logo.png" alt="Stando Logo" />
           <p class="BOTTOM-TEXT">
             <span class="text-wrapper">THE </span>
             <span class="span">#1</span>
             <span class="text-wrapper"> DA HOOD BOT SCRIPT PROVIDER</span>
           </p>
-          <button class="image-button" onclick="location.href='https://discord.gg/stando';">
-            <img src="https://img.favpng.com/6/25/23/computer-icons-discord-logo-smiley-emoticon-png-favpng-ThnHtQ8vuLhZrWxwuJtQWf8Aj.jpg" alt="Discord Button" />
+          <button class="button" onclick="location.href='https://discord.gg/stando';">
+            <div class="text-wrapper-2">Join Official Discord Server</div>
           </button>
           <p class="scripts-label">Scripts:</p>
           <div class="scripts-buttons">
