--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
           <button class="button" onclick="location.href='https://discord.gg/stando';">
             <div class="text-wrapper-2">Join Official Discord Server</div>
           </button>
-          <p class="scripts-label">Scripts:</p>
-          <div class="scripts-buttons">
-            <button class="button" onclick="location.href='https://discord.gg/stando';">
-              <div class="text-wrapper-2">Stand Script</div>
-            </button>
-            <button class="button" onclick="location.href='https://discord.gg/stando';">
-              <div class="text-wrapper-2">Sniper Script</div>
-            </button>
-            <button class="button" onclick="location.href='https://discord.gg/stando';">
-              <div class="text-wrapper-2">xk5ng Gui</div>
-            </button>
+          <div class="scripts-section">
+            <p class="scripts-label">Scripts:</p>
+            <div class="scripts-buttons">
+              <button class="button" onclick="location.href='https://discord.gg/stando';">
+                <div class="text-wrapper-2">Stand Script</div>
+              </button>
+              <button class="button" onclick="location.href='https://discord.gg/stando';">
+                <div class="text-wrapper-2">Sniper Script</div>
+              </button>
+              <button class="button" onclick="location.href='https://discord.gg/stando';">
+                <div class="text-wrapper-2">xk5ng Gui</div>
+              </button>
+            </div>
           </div>
         </div>
       </div>
